additional changes to fix the overlapping of back to top button with other icons

--- a/css/backToTopButton.css
+++ b/css/backToTopButton.css
@@ -1,9 +1,9 @@
 #backToTopBtn {
     position: fixed;
-    bottom: 2px;
+    bottom: 130px;
     right: 31px;
-    height: 42px;
-    width: 45px;
+    height: 50px;
+    width: 50px;
     padding: 10px 15px;
     font-size: 20px;
     cursor: pointer;
